@@ -1,3 +1,14 @@
+1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>
+
+	* Makefile.in: Set the myfulldir and mydir variables (which are
+		relative to buildtop and thisconfigdir, respectively.)
+
+1998-10-31  Theodore Ts'o  <tytso@rsts-11.mit.edu>
+
+	* fcc_maybe.c (fcc_lock_file): Removed all of the
+		filesystem-dependent mess for file locking, which has been
+		now properly moved to krb5_lock_file(), where it belongs.
+
 Fri Feb 27 18:03:33 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>
 
 	* Makefile.in: Changed thisconfigdir to point at the lib/krb5
